<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/workerName"
                style="@style/cardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:maxLines="1"
                android:textAllCaps="true"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Stark" />


            <LinearLayout
                android:id="@+id/hashrateReportedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workerName">

                <TextView
                    style="@style/cardSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/reported"
                    android:textAlignment="textStart"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/hashrateReported"
                    style="@style/cardSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:maxLines="1"
                    android:textColor="@color/colorTeal"
                    android:textSize="14sp"
                    tools:text="500 Mh/s" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/hashrateCurrentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hashrateReportedLabel">

                <TextView
                    style="@style/cardSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="14sp"
                    android:paddingEnd="0dp"
                    android:text="@string/current"
                    android:textAlignment="textEnd"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/hashrateCurrent"
                    style="@style/cardSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorSecondary"
                    android:textSize="14sp"
                    tools:text="3.75260568" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/hashrateAverageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hashrateCurrentLabel">

                <TextView
                    style="@style/cardSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12sp"
                    android:paddingEnd="0dp"
                    android:text="@string/average"
                    android:textAlignment="textEnd"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/hashrateAverage"
                    style="@style/cardSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorBlue"
                    android:textSize="14sp"
                    tools:text="3.75260568" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/workerLastSeenLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hashrateAverageLabel">

                <TextView
                    style="@style/cardSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_seen"
                    android:textAlignment="textEnd"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/workerLastSeen"
                    style="@style/cardSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="12sp"
                    tools:text="9 minutes ago" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>